syntax = "proto3";

option go_package = "github.com/sadhakbj/bookie-grpc/protos/bookie";

message Book {
    string id = 1;
    string title =2;
    string description =3;
    string author=4;
    int64 price =5; 
}

message ListBookRequest {
    int32 perPage =1;
}

message ListBooksResponse {
    repeated Book books =1;
}

message CreateBookRequest {
    string title =2;
    string description =3;
    string author=4;
    int64 price =5; 
}

message CreateBookResponse {
    Book book=1;
}

service Bookie {
    rpc ListBooks(ListBookRequest) returns (ListBooksResponse);
    rpc CreateBook(CreateBookRequest) returns (CreateBookResponse);
}